--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     </div>
-    {% load staticfiles %}
+    {% load static %}
     <script>
         // For receiving
         sender_id = "{{ receiver.id }}";
