--- a/templates/chat/index.html
+++ b/templates/chat/index.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
   <!DOCTYPE html>
   <html>
     <head>
@@ -21,8 +21,8 @@
     {% block body %}
         <div class="section blue lighten-3">
             <div class="container white-text center-align text">
-            <h2>Chat</h2>
-            <p>A simple Chat App using DjangoRestFramework</p>
+            <h2>Message</h2>
+            <p>Chat Application developed by Team 1</p>
             <div class="chip">
                 <img src="https://opbeat.com/docs/static/images/stacks/logo_django_alt.svg" class="white">
                 Django
